--- a/public/style.css
+++ b/public/style.css
@@ -1,46 +1,61 @@
-body{
-    font-family: 'Nunito';
+.chat
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-h2{
-    font-size: 18px;
-    padding: 10px 20px;
-    color: #575ed8;
+.chat li
+{
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
+
+.chat li.left .chat-body
+{
+    margin-left: 60px;
+}
+
+.chat li.right .chat-body
+{
+    margin-right: 60px;
 }
 
 
-.user{
-
-     background: #0f9da2;
-    color: #fff;
-    margin-top: 0px;
-    padding: 10px 20px;
-   font-family: Arial, Helvetica, sans-serif;
-   letter-spacing: 1.2px;
-   text-transform: uppercase;
-   font-size: 1.2rem;
-    font-weight: normal;
+.chat li .chat-body p
+{
+    margin: 0;
+    color: #777777;
 }
 
-#chatApp{
-    max-width: 600px;
-    margin: 30px auto;
-    border: 1px solid #ddd;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-    border-radius: 2px;
+.panel .slidedown .glyphicon, .chat .glyphicon
+{
+    margin-right: 5px;
 }
 
-#chat-window{
-    height: 400px;
+.panel-body
+{
     overflow-y: scroll;
-    background: #f9f9f9;
+    height: 350px;
 }
 
-#output p{
-    padding: 14px 0px;
-    margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
-    color: #555;
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
 }
 
 #join p{
@@ -67,35 +82,18 @@ h2{
     border-radius: 10px;
 }
 
-#output strong{
-    color: #575ed8;
+.primary-font{
+
+    font-size: 1.8rem;
+    color: green;
 }
 
-label{
-    box-sizing: border-box;
-    display: block;
-    padding: 10px 20px;
+.msg{
+    font-weight: 700;
 }
 
-input{
-    padding: 10px 20px;
-    box-sizing: border-box;
-    background: #eee;
-    border: 0;
-    display: block;
-    width: 100%;
-    background: #fff;
-    border-bottom: 1px solid #eee;
-    font-family: Nunito;
-    font-size: 16px;
-}
 
-button{
-    background: #575ed8;
-    color: #fff;
-    font-size: 18px;
-    border: 0;
-    padding: 12px 0;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
+.sweet-overlay{
+    background-color: powderblue ;
+    
 }
